Fix spacing of image caption

--- a/web/app/themes/radcliffe/style.css
+++ b/web/app/themes/radcliffe/style.css
@@ -628,7 +628,7 @@ a.search-toggle:hover {
 
 /* featured media */
 
-.featured-media-container { margin-bottom: 2em; }
+.featured-media-container { margin-bottom: 1em; }
 
 .featured-media {
 	background-position: center;
@@ -656,7 +656,7 @@ a.featured-media:hover { opacity: 0.75; }
 }
 
 .media-caption {
-  padding: 0 0 .5em;
+  padding: 0 0 1em;
   margin: 0;
   text-align: center;
 }
